-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.8.2
-
None
-
-
6854ea633 (dev), 3915684fb (6.9), 2d82e845c (dev), 3915e017e (6.10), fcf8c2c43 (6.9)
On Windows, QFontDabase in Qt 6.8 does not list style variants of families anymore. This is a regression from Qt 6.7. One liner to demonstrate the issue:
python -c "from PySide6.QtWidgets import QApplication; from PySide6.QtGui import QFontDatabase; app = QApplication([]); print('\n'.join(QFontDatabase.families()))" | grep -i arial
On Qt 6.7.2 the output is:
Arial Arial Black Arial Narrow Arial Rounded MT Bold
On Qt 6.8.2 the output is:
Arial Arial Rounded MT
Note that Arial Black and Arial Narrow are missing. This means it is no longer possible to select these via QFontComboBox, for example.
Downstream bug report: https://bugs.launchpad.net/bugs/2106504
- is duplicated by
-
QTBUG-136984 Missing fonts when using DirectWrite
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135817 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 638300,5 | dwrite: Support additional font names for system fonts | dev | qt/qtbase | Status: MERGED | +2 | +1 |
| 649409,2 | dwrite: Support additional font names for system fonts | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 649466,1 | dwrite: Support additional font names for system fonts | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |