Reapply "dwrite: Support additional font names for system fonts"

This reverts commit 2d82e845ccfcb2b5ae8ef96d79fb32d76dd89b23 with
modifications.

The purpose of the patch is to detect the GDI-compatible family
names of fonts in addition to the typographical names. E.g.
typographically "Arial" has a style called "Black" with a
high weight. For compatibility reasons, this is also available
by the family name "Arial Black" with style "Regular".

While the original change populated the database with the
legacy names, it did not populate the styles properly. This
was caught by the test tst_qquickfontdialogimpl in Qt Declarative.

This new version of the patch passes the test.

Fixes: QTBUG-135817
Pick-to: 6.8 6.10 6.11
Change-Id: I5eb71465daa996e33539b421ee52a601712a2b5e
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>